# python-project-bootstrap

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Earthfile  LICENSE  Makefile  README.md  bootstrap_wrapper.py  mkdocs.yml  pyproject.toml  python-project-bootstrap.sh  render_templates.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml  release.yml
dev-lifecycle/ci/: run-tests.sh
dev-lifecycle/hooks/: install-hooks.sh  pre-commit
dev-lifecycle/secrets/: detect-secrets.sh  gitleaks.toml
docs/: index.md
src/python_project_bootstrap/: __init__.py  cli.py
src/python_project_bootstrap/templates/: .dockerignore.j2  .env.example.j2  LICENSE.j2  README.md.j2  pyproject.toml.j2
src/python_project_bootstrap/templates/tests/: conftest.py.j2
src/python_project_bootstrap/templates/tests/unit/: test_cli.py.j2
templates/: .gitignore.j2  .pre-commit-config.yaml.j2  Dockerfile.j2  Makefile.j2  docker-compose.yml.j2
templates/src/__package__/: cli.py.j2
templates/src/__package__/api/: main.py.j2
templates/tests/unit/: test_api.py.j2
tests/: conftest.py  test_properties.py  test_review_properties.py
tests/helpers/: mock_tools.sh
