[project]
name = "python-project-bootstrap"
version = "0.1.0"
description = "Bootstrap tool that generates modern Python project scaffolding"
license = "MIT"
requires-python = ">=3.12"
authors = [{name = "Lucas Simonini", email = "contact@simonini.tech"}]
readme = "README.md"
keywords = ["python", "bootstrap", "scaffolding", "project-generator"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "jinja2",
    "typer",
    "rich",
]

[project.scripts]
python-project-bootstrap = "python_project_bootstrap.cli:app"

[project.urls]
Homepage = "https://github.com/lcssimonini/python-project-bootstrap"
Repository = "https://github.com/lcssimonini/python-project-bootstrap"
Issues = "https://github.com/lcssimonini/python-project-bootstrap/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/python_project_bootstrap"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "hypothesis",
    "ruff",
    "mypy",
    "mkdocs-material",
    "pyinstaller",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.uv.workspace]
members = [
    "test-py-project",
    "test-standalone",
    "test-verification",
    "test-bootstrap-project",
    "e2e-test-project",
]
